@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.watcher;
 
@@ -98,10 +99,13 @@ public class WatcherLifeCycleService implements ClusterStateListener {
         boolean isWatcherStoppedManually = isWatcherStoppedManually(event.state());
         boolean isStoppedOrStopping = stopStates.contains(this.state.get());
         // if this is not a data node, we need to start it ourselves possibly
-        if (event.state().nodes().getLocalNode().isDataNode() == false &&
-            isWatcherStoppedManually == false && isStoppedOrStopping) {
+        if (event.state().nodes().getLocalNode().canContainData() == false && isWatcherStoppedManually == false && isStoppedOrStopping) {
             this.state.set(WatcherState.STARTING);
-            watcherService.start(event.state(), () -> this.state.set(WatcherState.STARTED));
+            watcherService.start(
+                event.state(),
+                () -> this.state.set(WatcherState.STARTED),
+                (exception -> this.state.set(WatcherState.STOPPED))
+            );
             return;
         }
 
@@ -110,9 +114,9 @@ public class WatcherLifeCycleService implements ClusterStateListener {
                 clearAllocationIds();
                 boolean stopping = this.state.compareAndSet(WatcherState.STARTED, WatcherState.STOPPING);
                 if (stopping) {
-                    //waiting to set state to stopped until after all currently running watches are finished
+                    // waiting to set state to stopped until after all currently running watches are finished
                     watcherService.stop("watcher manually marked to shutdown by cluster state update", () -> {
-                        //only transition from stopping -> stopped (which may not be the case if restarted quickly)
+                        // only transition from stopping -> stopped (which may not be the case if restarted quickly)
                         boolean stopped = state.compareAndSet(WatcherState.STOPPING, WatcherState.STOPPED);
                         if (stopped) {
                             logger.info("watcher has stopped");
@@ -140,7 +144,7 @@ public class WatcherLifeCycleService implements ClusterStateListener {
         }
 
         String watchIndex = watcherIndexMetadata.getIndex().getName();
-        List<ShardRouting> localShards = routingNode.shardsWithState(watchIndex, RELOCATING, STARTED);
+        List<ShardRouting> localShards = routingNode.shardsWithState(watchIndex, RELOCATING, STARTED).toList();
         // no local shards, empty out watcher and dont waste resources!
         if (localShards.isEmpty()) {
             pauseExecution("no local watcher shards found");
@@ -156,16 +160,21 @@ public class WatcherLifeCycleService implements ClusterStateListener {
             .filter(shardRouting -> localShardIds.contains(shardRouting.shardId()))
             // shardrouting is not comparable, so we need some order mechanism
             .sorted(Comparator.comparing(ShardRouting::hashCode))
-            .collect(Collectors.toList());
+            .toList();
 
         if (previousShardRoutings.get().equals(localAffectedShardRoutings) == false) {
             if (watcherService.validate(event.state())) {
                 previousShardRoutings.set(localAffectedShardRoutings);
                 if (state.get() == WatcherState.STARTED) {
-                    watcherService.reload(event.state(), "new local watcher shard allocation ids");
+                    watcherService.reload(event.state(), "new local watcher shard allocation ids", (exception) -> {
+                        clearAllocationIds(); // will cause reload again
+                    });
                 } else if (isStoppedOrStopping) {
                     this.state.set(WatcherState.STARTING);
-                    watcherService.start(event.state(), () -> this.state.set(WatcherState.STARTED));
+                    watcherService.start(event.state(), () -> this.state.set(WatcherState.STARTED), (exception) -> {
+                        clearAllocationIds();
+                        this.state.set(WatcherState.STOPPED);
+                    });
                 }
             } else {
                 clearAllocationIds();
@@ -184,7 +193,7 @@ public class WatcherLifeCycleService implements ClusterStateListener {
     /**
      * check if watcher has been stopped manually via the stop API
      */
-    private boolean isWatcherStoppedManually(ClusterState state) {
+    private static boolean isWatcherStoppedManually(ClusterState state) {
         WatcherMetadata watcherMetadata = state.getMetadata().custom(WatcherMetadata.TYPE);
         return watcherMetadata != null && watcherMetadata.manuallyStopped();
     }
@@ -204,7 +213,7 @@ public class WatcherLifeCycleService implements ClusterStateListener {
         return previousShardRoutings.get();
     }
 
-    public Supplier<WatcherState> getState(){
+    public Supplier<WatcherState> getState() {
         return () -> state.get();
     }
 }
